--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -6,8 +6,8 @@ services:
     container_name: database
     volumes:
     - dbdata:/var/lib/postgresql/data/
-    expose:
-      - 5432
+    ports:
+      - 5432:5432
     env_file:
       - ../.env
 
